Fixing last minute bugs with glyphicons not showing up and FB like button not showing up, adding comments, adding favicon

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -9,4 +9,7 @@
 
 #user-wrapper {
   border: 3px outset #F4F4F4;
+  padding: 2em;
+  font-family: Lato,Helvetica;
+  font-size: 1.25em;
 }
